--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,20 +4,6 @@
 
 {% block body %}
 <h1>Hola</h1>
-
-<form action='/producto' method="post">
-
-    <label for="nombre">Nombre:</label>
-    <input type="text" name="nombre">
-
-    <label for="correo">Correo:</label>
-    <input type="text" name="correo">
-
-    <label for="categoria">Categoria:</label>
-    <input type="text" name="categoria">
-    <!-- Otros campos del formulario -->
-
-    <button type="submit">Enviar</button>
-</form>
+<A href="/producto"> Este es un link </A>
 
 {% endblock %}
