--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,10 @@
 {% block title %}{{ data.titulo }}{% endblock %}
 
 {% block body %}
+
 <h1>Hola</h1>
-<A href="/producto"> Este es un link </A>
+
+<A href="/producto"> agregar producto </A>
+<A href="/busqueda"> buscar producto </A>
 
 {% endblock %}
