--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,10 @@
 
 <h1>Hola</h1>
 
-<A href="/producto"> agregar producto </A>
+<A href="/producto"> agregar producto </A> 
+<br>
 <A href="/busqueda"> buscar producto </A>
+<br>
+<A href="/modificar"> modificar Cantidad </A>
 
 {% endblock %}
