--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,8 @@
 <br>
 <A href="/busqueda"> buscar producto </A>
 <br>
-<A href="/modificar"> modificar Cantidad </A>
+<A href="/stock"> stock </A>
+<br>
+<A href="/vender"> vender producto </A>
 
 {% endblock %}
