--- a/app/templates/vender.html
+++ b/app/templates/vender.html
@@ -4,13 +4,13 @@
 
 {% block body %}
 
-<form action='/producto' method="post">
+<form action='/vender' method="post">
 
     <label for="nombre">Nombre:</label>
     <input type="text" name="nombre">
 
-    <label for="cantidad">cantidad:</label>
-    <input type="number" name="cantidad">
+    <label for="cantidad_vendida">cantidad:</label>
+    <input type="number" name="cantidad_vendida">
 
     <label for="linea">linea:</label>
     <input type="text" name="linea">
