--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,3 @@
-{% extends './layout.html' %}
-
-{% block title %}{{ data.titulo }}{% endblock %}
-
+{% extends './layout.html' %} {% block title %}{{ data.titulo }}{% endblock %}
 {% block body %}
-
-<h1>Hola</h1>
-
-<A href="/producto"> agregar producto </A> 
-<br>
-<A href="/busqueda"> buscar producto </A>
-<br>
-<A href="/stock"> stock </A>
-<br>
-<A href="/vender"> vender producto </A>
-
 {% endblock %}
