--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/styles.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename = 'css/styles.css') }}"> -->
     <title>{% block title %}{% endblock %}</title>
+
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Inicio</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/stock">Stock</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/producto">Agregar Producto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/vender">Vender</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/ventas">Ventas</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     {% block body %}{% endblock %}
-     
 </body>
 </html>
